Fix size of project icon and spacing of nav links for small screens.

--- a/src/index.css
+++ b/src/index.css
@@ -388,7 +388,7 @@ header h4 {
 }
 
 .navbar-item a{
-  margin-right: 0;
+  margin-right: 0.4rem;
   font-size: 0.45rem;
   margin-left: 0.1rem;
 
@@ -396,8 +396,8 @@ header h4 {
 
 
 .projects img {
-   width:1.5rem;
-   margin:  0 -0.2rem;
+   width:1.1rem;
+   margin:  0 -0.1rem;
 }
 
 .btn {
